--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^1.3.3",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.7",
     "element-ui": "^2.15.13",
+    "eslint": "^8.37.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
